// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render InputMapPoint with various parameters Test with all parameters 1`] = `
<div
  className="survey-question__input-map-container"
>
  <input
    className="apptr__form-input input-map-hidden"
    defaultValue="{"type":"Feature","properties":{},"geometry":{"type":"Point","coordinates":[-73.1,45.02]}}"
    id="test"
    readOnly={true}
    type="hidden"
  />
  <div
    style={
      {
        "alignItems": "center",
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
      }
    }
  >
    <button
      className="button refresh-geocode green large"
      id="test_refresh"
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="svg-inline--fa fa-map-marker-alt fa-w-12 faIconLeft"
        data-icon="map-marker-alt"
        data-prefix="fas"
        focusable="false"
        role="img"
        style={{}}
        viewBox="0 0 384 512"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M172.268 501.67C26.97 291.031 0 269.413 0 192 0 85.961 85.961 0 192 0s192 85.961 192 192c0 77.413-26.97 99.031-172.268 309.67-9.535 13.774-29.93 13.773-39.464 0zM192 272c44.183 0 80-35.817 80-80s-35.817-80-80-80-80 35.817-80 80 35.817 80 80 80z"
          fill="currentColor"
          style={{}}
        />
      </svg>
      Refresh map
    </button>
    <div
      style={
        {
          "marginLeft": 10,
        }
      }
    />
  </div>
  <Markdown
    remarkPlugins={
      [
        [
          "remark-gfm",
          {
            "singleTilde": false,
          },
        ],
      ]
    }
  />
  <div
    aria-hidden="true"
    className="survey-question__input-map-container"
  >
    <div
      className="loader"
    >
      <p>
        Loading
        ...
      </p>
    </div>
  </div>
</div>
`;

exports[`Render InputMapPoint with various parameters Test with minimal parameters 1`] = `
<div
  className="survey-question__input-map-container"
>
  <input
    className="apptr__form-input input-map-hidden"
    id="test"
    readOnly={true}
    type="hidden"
  />
  <Markdown
    remarkPlugins={
      [
        [
          "remark-gfm",
          {
            "singleTilde": false,
          },
        ],
      ]
    }
  />
  <div
    aria-hidden="true"
    className="survey-question__input-map-container"
  >
    <div
      className="loader"
    >
      <p>
        Loading
        ...
      </p>
    </div>
  </div>
</div>
`;
